--- a/lit-april-flow/public/index.html
+++ b/lit-april-flow/public/index.html
@@ -31,6 +31,8 @@
       rel="stylesheet"
     />
 
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <title>React App</title>
   </head>
   <body>
